Fix nav dot misalignment

--- a/_sass/modules/_slider.scss
+++ b/_sass/modules/_slider.scss
@@ -86,6 +86,8 @@
 .tns-nav-active {
   background: transparent;
   border: 1px solid $white;
+  position: relative;
+  top: -1px;
 }
 
 // User Stories Slider
